fix: redis的强依赖问题